--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "database-update": "node ./server-app/data-access-layer/seed-data",
     "start": "concurrently — kill-others \"npm run frontend\" \"npm run backend\"",
     "backend": "nodemon server-app",
     "frontend": "cd client-app && npm build"
@@ -20,8 +21,10 @@
   },
   "homepage": "https://github.com/j-kav/koa-react-pg-fulltext-search#readme",
   "dependencies": {
+    "better-assert": "^1.0.2",
     "create-react-app": "^3.4.1",
     "dotenv": "^8.2.0",
+    "fast-csv": "^4.3.1",
     "http-status": "^1.4.2",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
@@ -29,6 +32,7 @@
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-router": "^9.1.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "pg": "^8.3.0"
   }
 }
