--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "run-s database-update frontend-install frontend-build manage-backend",
     "database-update": "node ./server-app/data-access-layer/seed-data",
-    "start": "concurrently — kill-others \"npm run frontend\" \"npm run backend\"",
-    "backend": "nodemon server-app",
-    "frontend": "cd client-app && npm build"
+    "start-server": "concurrently — kill-others \"npm run frontend\" \"npm run backend\"",
+    "manage-backend": "nodemon server-app",
+    "frontend-install": "cd client-app && yarn install",
+    "frontend-build": "cd client-app && yarn build"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
     "koa-mount": "^4.0.0",
     "koa-router": "^9.1.0",
     "koa-static": "^5.0.0",
+    "npm-run-all": "^4.1.5",
     "pg": "^8.3.0"
   }
 }
