--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa-router": "^9.1.0",
     "koa-static": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "pg": "^8.3.0"
+    "pg": "^8.3.0",
+    "yarn": "^1.22.4"
   }
 }
