--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-mount": "^4.0.0",
     "koa-router": "^9.1.0",
     "koa-static": "^5.0.0",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "pg": "^8.3.0",
     "yarn": "^1.22.4"
